--- a/next-example/package.json
+++ b/next-example/package.json
@@ -7,9 +7,9 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
-    "test:watch": "jest",
+    "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:updateSnapshot": "jest --updateSnapshot",
+    "test:updateSnapshot": "jest --u",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -32,9 +32,14 @@
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
     "@types/react": "18.0.9",
+    "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
+    "msw": "^0.47.2",
     "typescript": "4.6.4"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
