--- a/next-example/package.json
+++ b/next-example/package.json
@@ -6,12 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:updateSnapshot": "jest --u",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "lint": "eslint src --ext .ts,.tsx",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "pre-commit-lint": "npx lint-staged",
+    "prepare": "cd .. && husky install next-example/.husky",
+    "lint-staged": "npx lint-staged",
+    "ci": "pnpm lint-staged && pnpm test"
   },
   "dependencies": {
     "next": "latest",
@@ -20,6 +26,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.0",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "^6.5.12",
     "@storybook/addon-interactions": "^6.5.12",
@@ -34,9 +42,15 @@
     "@types/react": "18.0.9",
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
+    "eslint": "^8.23.1",
+    "eslint-config-next": "^12.3.0",
+    "eslint-plugin-testing-library": "^5.6.4",
+    "husky": "^8.0.1",
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
+    "lint-staged": "^13.0.3",
     "msw": "^0.47.2",
+    "prettier": "^2.7.1",
     "typescript": "4.6.4"
   },
   "msw": {
