--- a/next-example/package.json
+++ b/next-example/package.json
@@ -40,10 +40,12 @@
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
     "@types/react": "18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
     "eslint": "^8.23.1",
     "eslint-config-next": "^12.3.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-testing-library": "^5.6.4",
     "husky": "^8.0.1",
     "jest": "28.1.0",
