--- a/next-example/package.json
+++ b/next-example/package.json
@@ -38,7 +38,9 @@
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
+    "@types/jest": "^29.0.3",
     "@types/react": "18.0.9",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
@@ -50,7 +52,7 @@
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
     "lint-staged": "^13.0.3",
-    "msw": "^0.47.2",
+    "msw": "^0.47.3",
     "prettier": "^2.7.1",
     "typescript": "4.6.4"
   },
