--- a/next-example/tsconfig.json
+++ b/next-example/tsconfig.json
@@ -19,16 +19,9 @@
       "@components/*": ["src/components/*"],
       "@pages/*": ["src/pages/*"],
       "@mocks/*": ["src/mocks/*"]
-    }
+    },
+    "types": ["node", "jest", "@testing-library/jest-dom"]
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "types.d.ts",
-    "jest.setup.js",
-    "jest.config.js",
-    "jest.setup.js"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "types.d.ts", "jest.setup.js", "jest.config.js", "jest.setup.js"],
   "exclude": ["node_modules"]
 }
